--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
           uses: cypress-io/github-action@v6
           with:
             start: npm run fakeTest
+          continue-on-error: true
         - name: Deploy report page
           uses: peaceiris/actions-gh-pages@v3
           with:
