--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,12 @@ jobs:
         - name: Cypress run
           uses: cypress-io/github-action@v6
           with:
-            start: npm run fakeTest
+            start: npm run test
           continue-on-error: true
         - name: Deploy report page
           uses: peaceiris/actions-gh-pages@v3
           with:
             github_token: ${{ secrets.GH_TOKEN }}
             publish_dir: ./cypress/reports/html
-            user_name: 'github-actions[bot]'
-            user_email: 'github-actions[bot]@users.noreply.github.com'
+            user_name: 'Iunaldi'
+            user_email: 'ilkerunaldi76@gmail.com'
